# sonix_lyrics

./: .gitignore  CLAUDE.md  CONTRIBUTION.MD  Cargo.toml  LICENSE  LISCENSE.md  README.md  build-release.sh  config.conf  example.config.conf  flake.nix  test.sh
src/: config.rs  lyrics.rs  main.rs  navidrome.rs  setup.rs
