[package]
name = "sonix_lyrics"
version = "0.1.0"
edition = "2021"

authors = ["CanadianGamer <easygamer@gmail.com>"]
description = "Terminal-based synced lyrics & karaoke client for Navidrome (Rust + Ratatui)"
license = "MIT"
repository = "https://github.com/EasyCanadianGamer/sonix_lyrics"
homepage = "https://github.com/EasyCanadianGamer/sonix_lyrics"
readme = "README.md"
keywords = ["navidrome", "lyrics", "tui", "karaoke", "music"]
categories = ["command-line-utilities", "multimedia"]

# ────────────────────────────────────────────────
# Dependencies
# ────────────────────────────────────────────────
[dependencies]

# Terminal UI
crossterm = "0.27"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

# Error handling
thiserror = "1.0"

# Channels & timers
crossbeam-channel = "0.5"

# Config (your .conf loader replaces dotenvy eventually)
dotenvy = "0.15"

# Utility
urlencoding = "2.1"
chrono = { version = "0.4.42", features = ["serde"] }

# Logging
log = "0.4"
simplelog = "0.12"
