[package]
name = "sonix_lyrics"
version = "0.1.0"
edition = "2021"

authors = ["CanadianGamer <easygamer@gmail.com>"]
description = "Terminal-based synced lyrics & karaoke client for Navidrome (Rust + Ratatui)"
license = "MIT"
repository = "https://github.com/EasyCanadianGamer/sonix_lyrics"
homepage = "https://github.com/EasyCanadianGamer/sonix_lyrics"
readme = "README.md"
keywords = ["navidrome", "lyrics", "tui", "karaoke", "music"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]

crossterm = "0.27"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

thiserror = "1.0"

crossbeam-channel = "0.5"


urlencoding = "2.1"
chrono = { version = "0.4.42", features = ["serde"] }

log = "0.4"
simplelog = "0.12"

md5 = "0.7"
rand = "0.8"